make/apps/release-feed/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-feed
  namespace: release-feed
  labels:
    app.kubernetes.io/name: release-feed
    shell.platform/owner: make
spec:
  type: LoadBalancer
  loadBalancerIP: 10.77.0.222
  loadBalancerSourceRanges:
    - 10.77.0.0/24
  selector:
    app.kubernetes.io/name: release-feed
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
